--- a/spottr/Gemfile
+++ b/spottr/Gemfile
@@ -2,7 +2,7 @@ source 'https://rubygems.org'
 gem 'devise'
 gem 'twitter-bootstrap-rails', :git => 'git://github.com/seyhunak/twitter-bootstrap-rails.git'
 gem 'rails_12factor', group: :production
-
+gem 'seed_dump'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.5.1'
 # Use postgresql as the database for Active Record
