--- a/spottr/Gemfile
+++ b/spottr/Gemfile
@@ -1,4 +1,5 @@
 source 'https://rubygems.org'
+gem 'font-awesome-rails'
 gem 'devise'
 gem 'twitter-bootstrap-rails', :git => 'git://github.com/seyhunak/twitter-bootstrap-rails.git'
 gem 'rails_12factor', group: :production
